data implemanted behalve foto glass

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
         <hr />
       </div>
-      <h2 class="c-cocktail__name">Amaretto Shake</h2>
+      <h2 class="c-cocktail__name js-cocktail-title">Amaretto Shake</h2>
       <img
-        class="c-cocktail__image"
+        class="c-cocktail__image js-cocktail-image"
         src="https://www.thecocktaildb.com/images/media/drink/xk79al1493069655.jpg"
         alt="Amaretto Shake"
       />
       <div class="c-cocktail__ingredients">
         <h3 class="c-cocktail__ingredients-title">Ingredients</h3>
-        <table class="c-cocktail__ingredients-table">
+        <table class="c-cocktail__ingredients-table js-cocktail-ingredients">
           <tr class="table-header">
             <td>Ingredient</td>
             <td>Measure</td>
@@ -58,18 +58,20 @@
       </div>
       <div class="c-cocktail__instructions">
         <div class="c-cocktail__instructions-title">Instructions</div>
-        Combine all ingredients in a blender and blend at high speed until
-        smooth. Serve in chilled glass garnished with bittersweet chocolate
-        shavings.
+        <div class="js-cocktail-instructions">
+          Combine all ingredients in a blender and blend at high speed until
+          smooth. Serve in chilled glass garnished with bittersweet chocolate
+          shavings.
+        </div>
       </div>
       <div class="c-cocktail__glass">
         <img
-          class="c-cocktail__glass-image"
+          class="c-cocktail__glass-image js-cocktail-glass"
           src="https://tse4.mm.bing.net/th?id=OIP.Nvjw1Qpr-YrznjmRaYRR2AHaOT&pid=Api"
           alt="glass"
         />
         <div class="c-cocktail__glass-overlay">
-          <div class="c-cocktail__glass-text">
+          <div class="c-cocktail__glass-text js-cocktail-glass-text">
             Glass:<br />
             Collins glass
           </div>
